# Ai-Automated-trading

./: .gitignore  .replit  README.md  ai_trader.py  config.py  hourly_trader.py  main.py  manual_daily_report.py  manual_trade.py  memory_monitor.py  pyproject.toml  replit_scheduler.py  requirements.txt  scheduler.py  simple_replit_runner.py  test_replit_setup.py  test_system.py
explanations/: TRADING_GLOSSARY.md
